# moRPL

./: .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  Makefile.inc  Makefile_2G  README.md  asp_1.tif  asp_time.csv  aspectTrans.cpp  aspectTrans.h  demoTrans.cpp  demoTrans.h  exec.sh  main  main.cpp  morpl-Error.h  morpl-OperatorDevice.cpp  morpl-node.cpp  morpl-node.h  morpl-openclManager.cpp  morpl-openclManager.h  out_1.tif  pAspect  pAspect.cpp  profile.txt  prpl-basicTypes.h  prpl-cellspace.cpp  prpl-cellspace.h  prpl-cellspaceInfo.cpp  prpl-dataManager.cpp  prpl-dataManager.h  prpl-neighborhood.cpp  prpl-neighborhood.h  prpl-ownershipMap.cpp  prpl-process.cpp  prpl-process.h  prpl-transition.cpp  (+4 more)
OpenCL/: add.cl
include/: morpl-OperatorDevice.h  morpl-Test.h  morpl-node.h  morpl-openclManager.h  prpl-basicTypes.h  prpl-dataManager.h  prpl-transferInfo.h  prpl-transition.h
src/: morpl-Error.cpp  morpl-Test.cpp  morpl-node.cpp  morpl-openclManager.cpp  prpl-dataManager.cpp  prpl-layer.cpp  prpl-process.cpp  prpl-transition.cpp
test/: main.cpp
